# ZephyrProjectTemplate

./: .codecov.yml  .gcovignore  .gitignore  CLAUDE.md  CMakeLists.txt  ZephyrProjectTemplate.code-workspace  gcovr.cfg  prj.conf  readme.md  setupnotes.md  sonar-project.properties  west.yml
.github/: .codecov.yml
.github/workflows/: build.yml  docs.yml
docs/: adding-codecov.md
lib/: CMakeLists.txt
lib/hexascii/: CMakeLists.txt  hexascii.cpp  hexascii.hpp
lib/qrcode/: CMakeLists.txt  bitmatrix.hpp  bitvector.hpp  encodingformat.hpp  gf256.hpp  polynome.hpp  qrcode.cpp  qrcode.hpp  qrcode.md  reedsolomon.cpp  reedsolomon.hpp
src/: main.c  main.cpp
svd/: readme.md
tests/lib/custom/: testcase.yaml
tests/lib/hexascii/: CMakeLists.txt  prj.conf  test.cpp  testcase.yaml
tests/lib/qrcode/: CMakeLists.txt  prj.conf  test.cpp  testcase.yaml
